next
----

1.0
---
  * Provide scripts to measure actual kernel and user space memory
    consumption in a QEMU-based VM
  * Store the values from these scripts in a configuration file
    which is then used by "kdumptool calibrate"
  * Building kdump initrd using a custom configuration file

0.9.2
-----
  * Isolate fadump initrd within the default one
  * Bug fixes
  * Code cleanups

0.9.1
-----
  * This is the last release compatible with C++ 98
  * Automatically translate Xen console= option to its Linux counterpart
  * Calculate memory requirements for LUKS2-encrypted volumes using Argon2
  * Do not add any network options if ip= is given explicitly by
    KDUMP_COMMANDLINE or KDUMP_COMMANDLINE_APPEND
  * Allow requesting network support with a ":force" KDUMP_NETCONFIG suffix
  * Use fence_kdump_send if found
  * Drop dependency on OpenSSL
  * Test case for string utils
  * Many bugfixes

0.9.0
-----
  * Support for Aarch64.
  * KDUMP_SSH_IDENTITY option to use a separate SSH private key.
  * Update kdump runt-time memory requirements.
  * Prefer kexec_load_file(2) if available.
  * Bugfix: Fix systemd service file dependencies.
  * Bugfix: Fix remote kdump in IPv6-only networks.
  * Remove support of old SUSE mkinitrd.

0.8.16
------
  * Add a network check with configurable timeout (KDUMP_NET_TIMEOUT)
  * Improve network setup (VLANs, bridges, bonding)
  * Get network configuration from wicked if possible
  * Enhance "kdumptool calibrate" output
  * Install systemd unit file
  * Add a separate systemd service to rebuild kdumprd at boot
  * Drop dependency on libssh2 (use system ssh binary for SFTP)
  * IPv6 modes for KDUMP_NETCONFIG
  * Honour KDUMP_IMMEDIATE_REBOOT with fadump
  * KDUMP_FADUMP_SHELL option to allow debugging of fadump
  * Support for dracut's systemd module
  * Override kdump device systemd job timeout (using rd.timeout)
  * Take framebuffer size into account for calibrate