@@ -1,5 +1,6 @@
 next
 ----
+  * Use the pbl script to udpate the bootloader
 
 1.0
 ---
